Dumb temp fix for parallax flickering (until Chromium fixes their CSS engine) + updated JS libraries (linking to cdnjs now)

--- a/styles/midboss.css
+++ b/styles/midboss.css
@@ -392,7 +392,7 @@ margin-bottom: -8px;
 
 .header-background{
   width:100%;
-  height:100%;
+  height:99.9%;
   background-image:url("./../imgs/pink.png");
   background-repeat:no-repeat;
   background-size:cover;
@@ -445,7 +445,7 @@ margin-bottom: -8px;
 
 .header-backgroundc{
   width:100%;
-  height:100%;
+  height:99.99%;
   background-image:url("./../imgs/pinkc.png");
   background-repeat:no-repeat;
   background-size:cover;
